Fixed layout issues with captions

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-
 div.menu {
+}
+
+div.menuitems {
     display:flex;
     flex-wrap:wrap;
 }
